Fixed Images not showing properly.

--- a/css/style.css
+++ b/css/style.css
@@ -506,96 +506,6 @@ span {
   width: 100%;
 }
 
-/* Next & previous buttons */
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 40%;
-  width: auto;
-  padding: 16px;
-  margin-top: -50px;
-  color: white;
-  font-weight: bold;
-  font-size: 20px;
-  border-radius: 0 3px 3px 0;
-  -webkit-user-select: none;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 25%;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #04ff00;
-  font-size: 15px;
-  text-align: center;
-  padding: 2px;
-  position: absolute;
-  top: 0;
-  display: inline-block;
-}
-
-/* Container for image text */
-.caption-container {
-  text-align: center;
-  background-color: #222;
-  padding: 2px 16px;
-  width: 50%;
-  color: white;
-  display: inline-block;
-}
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-/* Six columns side by side */
-.column {
-  float: left;
-  width: 16.66%;
-}
-
-/* Add a transparency effect for thumnbail images */
-.demo {
-  opacity: 0.6;
-}
-
-.active,
-.demo:hover {
-  opacity: 1;
-}
-
-/* Position the image container (needed to position the left and right arrows) */
-.container {
-  position: relative;
-  text-align: center;
-}
-
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-
-.mySlides img {
-  vertical-align: middle;
-  width: 50%;
-  display: inline-block;
-}
-
 .notransition {
   -webkit-transition: none !important;
   -moz-transition: none !important;
